add genres and authors to books
